14,1: Release-related website updates
Everything except the announcement itself

--- a/website/themes/beastie/layouts/partials/sidenav.html
+++ b/website/themes/beastie/layouts/partials/sidenav.html
@@ -59,6 +59,7 @@
       <li>{{ i18n "productionRelease" }}: <br /><a href={{ index .data.releases "u-rel132-announce" }}>{{ index .data.releases "rel132-current" }}</a></li>
       <li>{{ i18n "productionRelease" }}: <br /><a href={{ index .data.releases "u-rel133-announce" }}>{{ index .data.releases "rel133-current" }}</a></li>
       <li>{{ i18n "productionRelease" }}: <br /><a href={{ index .data.releases "u-rel140-announce" }}>{{ index .data.releases "rel140-current" }}</a></li>
+      <li>{{ i18n "productionRelease" }}: <br /><a href={{ index .data.releases "u-rel141-announce" }}>{{ index .data.releases "rel141-current" }}</a></li>
     </ul>
   </li>
   <li>
