website: Replace website's top banner with a higher-resolution version
The current banner is visibly low resolution. I made the following
graphical changes to the banner:

- upscaled by 2x
- overlayed a high-resolution version of the FreeBSD logo
  which I exported from the Illustrator source file
  (website/static/logo/logo-basic.ai)
- removed "FreeBSD" typography in Photoshop and placed a high-resolution
  version in the same place (from logo-basic.ai as well)
- created a new ® sign
- applied a small patch of gradient to smooth out the line visible in
  the top left corner of the banner, where the image borders on the
  background of the rest of the navbar

Sadly, I was not able to do the same for "The Power To Serve",
since the .ai file does not contain it, and the font used for it is
not available anywhere either. I therefore stayed with the original
low-resolution version for that.

I then made the following changes:

- I included the new banner, removed the old one
- I decided to rename it from logo-red.png to banner-red.png, since it's
  more accurate, and easier to test (replacing an image file without
  renaming it was often causing preview issues for me, i.e., the old
  image was often still displayed intend of the new one)
- I changed all instances of the usage to use the new asset and added
  explicit height/width where necessary

Reviewed by:		bcr, 0mp
Differential Revision:	https://reviews.freebsd.org/D45782

--- a/website/themes/beastie/layouts/partials/site-header.html
+++ b/website/themes/beastie/layouts/partials/site-header.html
@@ -1,7 +1,7 @@
 <header>
   <div>
     <a href={{ absLangURL ($.Site.BaseURL ) }} title={{ i18n "freebsd" }}>
-    <img src="{{ absLangURL ($.Site.BaseURL ) }}images/logo-red.png" alt={{ i18n "freebsdPowerServe" }} />
+      <img src="{{ absLangURL ($.Site.BaseURL ) }}images/banner-red.png" alt={{ i18n "freebsdPowerServe" }} width="457" height="75" />
     </a>
   </div>
   <div id="headerlogoright">
