--- a/website/content/en/layout/css/layout.css
+++ b/website/content/en/layout/css/layout.css
@@ -15,6 +15,7 @@
 #container {
   margin: 0em auto;
   width: 90%;
+  max-width: 1600px;
   padding: 0;
   padding-top: 0px;
   padding-bottom: 15px;
