--- a/documentation/themes/beastie/layouts/articles/single.html
+++ b/documentation/themes/beastie/layouts/articles/single.html
@@ -42,9 +42,12 @@
       <div class="resources">
         <h3>{{ i18n "resources" }}</h3>
         <ul class="contents">
-          {{ $pathSections := split .Page.File "/" }}
-          {{ $path := printf "%s/%s/%s_%s.pdf" (index $pathSections 0) (index $pathSections 1) (index $pathSections 1) $.Site.Home.Language }}
-          {{ $pdfUrl := printf "%s%s/%s" $.Site.Params.downloadBaseUrl $.Site.Home.Language $path }}
+          {{ $pathSections := split .Page.Path "/" }}
+          {{ $docLang := $.Site.Home.Language.Lang }}
+          {{ $docType := index $pathSections 1 }}
+          {{ $docName := index $pathSections 2 }}
+          {{ $pdfFilename := printf "%s_%s.pdf" $docName $docLang }}
+          {{ $pdfUrl := printf "%s%s/%s/%s/%s" $.Site.Params.downloadBaseUrl $docLang $docType $docName $pdfFilename }}
           <li><i class="fa fa-file-pdf-o" aria-hidden="true" title="{{ i18n "download-pdf" }}"></i><a href="{{ $pdfUrl }}">{{ i18n "download-pdf" }}</a></li>
           {{ $editUrl := printf "%s%s/%s" $.Site.Params.editBaseUrl $.Site.Home.Language .Page.File }}
           <li><i class="fa fa-pencil-square-o" aria-hidden="true" title="{{ i18n "edit-page" }}"></i><a href="{{ $editUrl }}" target="_blank">{{ i18n "edit-page" }}</a></li>
