website: Rename "More Events", "More Media" and "More News" to just "More"
The naming of these buttons is inconsistent - two of them just say
"More" and three say "More X". Because the section tittles are very
close and mention "X", I believe just "More" is better. This also allows
the removal of some i18n entries, including one that was inconsistent
(missing 1 of 4 entries).

Reviewed by:		0mp
Differential Revision:	https://reviews.freebsd.org/D45809

--- a/website/themes/beastie/layouts/index.html
+++ b/website/themes/beastie/layouts/index.html
@@ -153,7 +153,7 @@
             <div>
               <ul class="newseventslist">
                 <li class="first-child">
-                  <a href={{ printf "%s%s/%s" $siteBaseUrl $language "news/newsflash/" }} title={{ i18n "moreNews" }}>{{ i18n "moreNews" }}</a>
+                  <a href={{ printf "%s%s/%s" $siteBaseUrl $language "news/newsflash/" }} title={{ i18n "more" }}>{{ i18n "more" }}</a>
                 </li>
                 <li class="last-child">
                   <a href="{{ absLangURL ($.Site.BaseURL) }}news/feed.xml" title={{ i18n "rssNews" }}>
@@ -173,7 +173,18 @@
           <h2>{{ i18n "upcomingEvents" }}</h2>
           <div class="newseventswrap">
             {{ partial "events.html" . }}
-            <a href={{ printf "%s%s/%s" $siteBaseUrl $language "events/" }} title={{ i18n "moreEvents" }}>{{ i18n "moreEvents" }}</a>
+            <div>
+              <ul class="newseventslist">
+                <li class="first-child">
+                  <a href={{ printf "%s%s/%s" $siteBaseUrl $language "events/" }} title={{ i18n "more" }}>{{ i18n "more" }}</a>
+                </li>
+                <li class="last-child">
+                  <a href="{{ absLangURL ($.Site.BaseURL) }}events/feed.xml" title={{ i18n "rssEvents" }}>
+                    <img class="rssimage" src="{{ absLangURL ($.Site.BaseURL) }}images/ico_rss.png" alt={{ i18n "rssEvents" }} width="27" height="12" />
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -185,7 +196,18 @@
           <h2>{{ i18n "press" }}</h2>
           <div class="newseventswrap">
             {{ partial "press.html" . }}
-            <a href={{ printf "%s%s/%s" $siteBaseUrl $language "press/" }} title={{ i18n "moreMedia" }}>{{ i18n "moreMedia" }}</a>
+            <div>
+              <ul class="newseventslist">
+                <li class="first-child">
+                  <a href={{ printf "%s%s/%s" $siteBaseUrl $language "press/" }} title={{ i18n "more" }}>{{ i18n "more" }}</a>
+                </li>
+                <li class="last-child">
+                  <a href="{{ absLangURL ($.Site.BaseURL) }}press/feed.xml" title={{ i18n "rssMedia" }}>
+                    <img class="rssimage" src="{{ absLangURL ($.Site.BaseURL) }}images/ico_rss.png" alt={{ i18n "rssMedia" }} width="27" height="12" />
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -200,7 +222,7 @@
             <div>
               <ul class="newseventslist">
                 <li class="first-child">
-                  <a href={{ printf "%s%s/%s" $siteBaseUrl $language "security/advisories/" }} title={{ i18n "moreErrata" }}>{{ i18n "more" }}</a>
+                  <a href={{ printf "%s%s/%s" $siteBaseUrl $language "security/advisories/" }} title={{ i18n "more" }}>{{ i18n "more" }}</a>
                 </li>
                 <li class="last-child">
                   <a href="{{ absLangURL ($.Site.BaseURL) }}security/feed.xml" title={{ i18n "rssSecurity" }}>
@@ -217,7 +239,7 @@
             <div>
               <ul class="newseventslist">
                 <li class="first-child">
-                  <a href={{ printf "%s%s/%s" $siteBaseUrl $language "security/notices/" }} title={{ i18n "moreErrata" }}>{{ i18n "more" }}</a>
+                  <a href={{ printf "%s%s/%s" $siteBaseUrl $language "security/notices/" }} title={{ i18n "more" }}>{{ i18n "more" }}</a>
                 </li>
                 <li class="last-child">
                   <a href="{{ absLangURL ($.Site.BaseURL) }}security/feed.xml" title={{ i18n "rssSecurity" }}>
