--- a/website/themes/beastie/layouts/index.html
+++ b/website/themes/beastie/layouts/index.html
@@ -157,7 +157,7 @@
                 </li>
                 <li class="last-child">
                   <a href="{{ absLangURL ($.Site.BaseURL) }}news/feed.xml" title={{ i18n "rssNews" }}>
-                  <img class="rssimage" src="{{ absLangURL ($.Site.BaseURL) }}images/ico_rss.png" alt={{ i18n "rssNews" }} width="27" height="12" />
+                  <img class="rssimage" src="{{ absLangURL ($.Site.BaseURL) }}images/rss_icon.png" alt={{ i18n "rssNews" }} width="27" height="12" />
                   </a>
                 </li>
               </ul>
@@ -180,7 +180,7 @@
                 </li>
                 <li class="last-child">
                   <a href="{{ absLangURL ($.Site.BaseURL) }}events/feed.xml" title={{ i18n "rssEvents" }}>
-                    <img class="rssimage" src="{{ absLangURL ($.Site.BaseURL) }}images/ico_rss.png" alt={{ i18n "rssEvents" }} width="27" height="12" />
+                    <img class="rssimage" src="{{ absLangURL ($.Site.BaseURL) }}images/rss_icon.png" alt={{ i18n "rssEvents" }} width="27" height="12" />
                   </a>
                 </li>
               </ul>
@@ -203,7 +203,7 @@
                 </li>
                 <li class="last-child">
                   <a href="{{ absLangURL ($.Site.BaseURL) }}press/feed.xml" title={{ i18n "rssMedia" }}>
-                    <img class="rssimage" src="{{ absLangURL ($.Site.BaseURL) }}images/ico_rss.png" alt={{ i18n "rssMedia" }} width="27" height="12" />
+                    <img class="rssimage" src="{{ absLangURL ($.Site.BaseURL) }}images/rss_icon.png" alt={{ i18n "rssMedia" }} width="27" height="12" />
                   </a>
                 </li>
               </ul>
@@ -226,7 +226,7 @@
                 </li>
                 <li class="last-child">
                   <a href="{{ absLangURL ($.Site.BaseURL) }}security/feed.xml" title={{ i18n "rssSecurity" }}>
-                  <img class="rssimage" src="{{ absLangURL ($.Site.BaseURL) }}images/ico_rss.png" alt="News RSS Feed" width="27" height="12" />
+                  <img class="rssimage" src="{{ absLangURL ($.Site.BaseURL) }}images/rss_icon.png" alt="News RSS Feed" width="27" height="12" />
                   </a>
                 </li>
               </ul>
@@ -243,7 +243,7 @@
                 </li>
                 <li class="last-child">
                   <a href="{{ absLangURL ($.Site.BaseURL) }}security/feed.xml" title={{ i18n "rssSecurity" }}>
-                  <img class="rssimage" src="{{ absLangURL ($.Site.BaseURL) }}images/ico_rss.png" alt="News RSS Feed" width="27" height="12" />
+                  <img class="rssimage" src="{{ absLangURL ($.Site.BaseURL) }}images/rss_icon.png" alt="News RSS Feed" width="27" height="12" />
                   </a>
                 </li>
               </ul>
