--- a/website/themes/beastie/static/css/navigation.css
+++ b/website/themes/beastie/static/css/navigation.css
@@ -302,7 +302,7 @@ nav ul ul ul li:hover ul {
 }
 
 #feedlinks ul {
-  list-style-image: url(../images/ico_rss.png);
+  list-style-image: url(../images/rss_icon_small.png);
 }
 
 /* Right Navigation */
