website: Adjust styling of the RSS buttons on the home page of the website
This change:
- aligns the RSS icon vertically with the line it's displayed on
- changes the color of the vertical separator (border) to be more
  visible and consistent with the one used in the i18n switcher

Reviewed by:		0mp
Differential Revision:	https://reviews.freebsd.org/D45807

--- a/website/content/en/layout/css/layout.css
+++ b/website/content/en/layout/css/layout.css
@@ -280,7 +280,7 @@
 .newseventslist li {
   padding: 0 0.3em 0 0.5em;
   display: inline;
-  border-right: 1px solid #E1E1E1;
+  border-right: 1px solid #B6B6B6;
 }
 
 .newseventslist li a {
@@ -289,6 +289,8 @@
 .newseventslist li.last-child {
   border-right: 0;
   padding-right: 0;
+  display: inline-block;
+  line-height: 0.9em;
 }
 
 .newseventslist li.first-child {
