website: Add red arrows to the "More" buttons at the bottom of the news/events/press sections
Arrows on the left side of a link are used in several places on the
webiste. Adding them to the "More" buttons makes them stand out a bit
and communicates that they have a different nature from the links above
them.

Reviewed by:		0mp
Differential Revision:	https://reviews.freebsd.org/D45811

--- a/website/content/en/layout/css/layout.css
+++ b/website/content/en/layout/css/layout.css
@@ -294,7 +294,11 @@
 }
 
 .newseventslist li.first-child {
-  padding-left: 0;
+  margin: 0;
+  padding-left: 12px;
+  background-image: url(../images/blt_red_arrow.png);
+  background-repeat: no-repeat;
+  background-position: 0px 0.5em;
 }
 
 .newseventslist li.only-child {
