website: Visually rearrange main buttons
The current placement of the "New To FreeBSD?" button is slightly
chaotic, as it's not visually aligned with anything else, and uses a
background color not used anywhere else. The "Download FreeBSD" button
is also visually misaligned and uses a font size not used anywhere else.

This proposed change puts the two buttons together, aligns their left
edge with the "Supported releases" section, adjusts width to make sure
the titles fit on the same page, and aligns vertically with
`beastie.png`. It unifies their font size at 1.3em (which is also used
elsewhere) and changes the background color of "New To (..)" button to
be lighter and the same as used below.

Reviewed by:		0mp
Differential Revision:	https://reviews.freebsd.org/D45798

--- a/website/content/en/layout/css/layout.css
+++ b/website/content/en/layout/css/layout.css
@@ -181,7 +181,7 @@
 #frontfeaturemiddle {
   float: left;
   margin-top: 20px;
-  background: url(../images/beastie.png) no-repeat top left;
+  background: url(../images/beastie.png) no-repeat center left;
   min-height: 196px;
   width: 30%;
 }
@@ -343,7 +343,7 @@
 #frontreleases {
   padding: 0;
   margin: 8px;
-  margin-left: 190px;
+  margin-left: 210px;
   margin-top: 5px;
   padding-bottom: 20px;
   color: #666;
@@ -451,7 +451,7 @@
   margin-top: -8px;
   margin-bottom: -8px;
   text-align: center;
-  font-size: 1.4em;
+  font-size: 1.3em;
   font-weight: bold;
 }
 
@@ -461,12 +461,17 @@
 }
 
 .frontgetroundbox {
-  margin-top: 50px;
-  margin-left: 160px;
+  margin-top: 10px;
+  margin-left: 210px;
   padding: 0;
-  width: 190px;
-  background-color: #FACC2E;
+  width: 325px;
+  background-color: #facc2e;
   border-radius: 15px;
+}
+
+.frontgetroundbox.newtofreebsd {
+  margin-top: 50px;
+  background-color: #eee;
 }
 
 /* Secondary Pages */
