--- a/website/themes/beastie/layouts/index.html
+++ b/website/themes/beastie/layouts/index.html
@@ -25,6 +25,21 @@
         </div>
       </div>
       <div id="frontfeaturemiddle">
+        <div class="frontgetroundbox newtofreebsd">
+            <div class="frontgettop">
+                <div>
+                <b style="display: none">.</b>
+                </div>
+            </div>
+            <div class="frontgetcontent">
+                <a href={{ "projects/newbies/" | absLangURL }}>{{ i18n "newFreeBSD" }}</a>
+            </div>
+            <div class="frontgetbot">
+            <div>
+            <b style="display: none">.</b>
+            </div>
+        </div>
+        </div>
         <div class="frontgetroundbox">
           <div class="frontgettop">
             <div>
@@ -118,21 +133,6 @@
                 <a href={{ "ports/" | absLangURL }} title={{ i18n "ports" }}>{{ i18n "ports" }}</a>
               </li>
             </ul>
-          </div>
-        </div>
-        <div class="frontnewroundbox">
-          <div class="frontnewtop">
-            <div>
-              <b style="display: none">.</b>
-            </div>
-          </div>
-          <div class="frontnewcontent">
-            <a href={{ "projects/newbies/" | absLangURL }}>{{ i18n "newFreeBSD" }}</a>
-          </div>
-          <div class="frontnewbot">
-            <div>
-              <b style="display: none">.</b>
-            </div>
           </div>
         </div>
       </div>
