--- a/website/themes/beastie/static/css/layout.css
+++ b/website/themes/beastie/static/css/layout.css
@@ -152,7 +152,7 @@ header {
 #frontfeaturemiddle {
   float: left;
   margin-top: 20px;
-  background: url(../images/beastie.png) no-repeat top left;
+  background: url(../images/beastie.png) no-repeat center left;
   min-height: 196px;
   width: 30%;
 }
@@ -381,7 +381,7 @@ header {
 #frontreleases {
   padding: 0;
   margin: 8px;
-  margin-left: 190px;
+  margin-left: 210px;
   margin-top: 5px;
   padding-bottom: 20px;
   color: #666;
@@ -473,7 +473,7 @@ header {
   margin-top: -8px;
   margin-bottom: -8px;
   text-align: center;
-  font-size: 1.4em;
+  font-size: 1.3em;
   font-weight: bold;
 }
 
@@ -483,12 +483,17 @@ header {
 }
 
 .frontgetroundbox {
-  margin-top: 50px;
-  margin-left: 160px;
+  margin-top: 10px;
+  margin-left: 210px;
   padding: 0;
-  width: 190px;
-  background-color: #FACC2E;
+  width: 325px;
+  background-color: #facc2e;
   border-radius: 15px;
+}
+
+.frontgetroundbox.newtofreebsd {
+  margin-top: 50px;
+  background-color: #eee;
 }
 
 /* Secondary Pages */
