--- a/website/themes/beastie/layouts/news/list.html
+++ b/website/themes/beastie/layouts/news/list.html
@@ -25,7 +25,7 @@
           {{ $data := index .Site.Data $.Language.Lang }}
           {{ $newsData = $data.news }}
         {{ else }}
-          {{ $dataDefaultLanguage := index .Site.Data .Sites.First.Language.Lang }}
+          {{ $dataDefaultLanguage := index .Site.Data .Sites.Default.Language.Lang }}
           {{ $newsData = $dataDefaultLanguage.news }}
         {{ end }}
 
