--- a/website/themes/beastie/layouts/partials/commercial-software.html
+++ b/website/themes/beastie/layouts/partials/commercial-software.html
@@ -5,7 +5,7 @@
   {{ $data := index .Site.Data $.Language.Lang }}
   {{ $softwareVendorsData = $data.vendors }}
 {{ else }}
-  {{ $dataDefaultLanguage := index .Site.Data .Sites.First.Language.Lang }}
+  {{ $dataDefaultLanguage := index .Site.Data .Sites.Default.Language.Lang }}
   {{ $softwareVendorsData = $dataDefaultLanguage.vendors }}
 {{ end }}
 
