--- a/website/themes/beastie/layouts/press/list.html
+++ b/website/themes/beastie/layouts/press/list.html
@@ -24,7 +24,7 @@
           {{ $data := index .Site.Data $.Language.Lang }}
           {{ $pressData = $data.press }}
         {{ else }}
-          {{ $dataDefaultLanguage := index .Site.Data .Sites.First.Language.Lang }}
+          {{ $dataDefaultLanguage := index .Site.Data .Sites.Default.Language.Lang }}
           {{ $pressData = $dataDefaultLanguage.press }}
         {{ end }}
 
