--- a/website/themes/beastie/layouts/shortcodes/get-event-last-year-info.html
+++ b/website/themes/beastie/layouts/shortcodes/get-event-last-year-info.html
@@ -1,6 +1,6 @@
 {{ $param := (.Get 0) }}
 
-{{ $eventsData := index .Page.Site.Data .Page.Sites.First.Language.Lang }}
+{{ $eventsData := index .Page.Site.Data .Page.Sites.Default.Language.Lang }}
 
 {{ $lastYear := sub (int (now.Format "2006")) 1 }}
 
