--- a/website/themes/beastie/layouts/events/single.html
+++ b/website/themes/beastie/layouts/events/single.html
@@ -23,7 +23,7 @@
         {{ $data := index .Site.Data $.Language.Lang }}
         {{ $eventsData = $data }}
       {{ else }}
-        {{ $dataDefaultLanguage := index .Site.Data .Sites.First.Language.Lang }}
+        {{ $dataDefaultLanguage := index .Site.Data .Sites.Default.Language.Lang }}
         {{ $eventsData = $dataDefaultLanguage }}
       {{ end }}
 
