--- a/website/themes/beastie/layouts/partials/commercial-consulting.html
+++ b/website/themes/beastie/layouts/partials/commercial-consulting.html
@@ -5,7 +5,7 @@
   {{ $data := index .Site.Data $.Language.Lang }}
   {{ $consultingVendorsData = $data.vendors }}
 {{ else }}
-  {{ $dataDefaultLanguage := index .Site.Data .Sites.First.Language.Lang }}
+  {{ $dataDefaultLanguage := index .Site.Data .Sites.Default.Language.Lang }}
   {{ $consultingVendorsData = $dataDefaultLanguage.vendors }}
 {{ end }}
 
