--- a/website/themes/beastie/layouts/partials/commercial-isp.html
+++ b/website/themes/beastie/layouts/partials/commercial-isp.html
@@ -5,7 +5,7 @@
   {{ $data := index .Site.Data $.Language.Lang }}
   {{ $ispVendorsData = $data.vendors }}
 {{ else }}
-  {{ $dataDefaultLanguage := index .Site.Data .Sites.First.Language.Lang }}
+  {{ $dataDefaultLanguage := index .Site.Data .Sites.Default.Language.Lang }}
   {{ $ispVendorsData = $dataDefaultLanguage.vendors }}
 {{ end }}
 
