--- a/website/themes/beastie/layouts/shortcodes/get-usergroups-info.html
+++ b/website/themes/beastie/layouts/shortcodes/get-usergroups-info.html
@@ -1,6 +1,6 @@
 {{ $param := (.Get 0) }}
 
-{{ $usergroupsData := index .Page.Site.Data .Page.Sites.First.Language.Lang }}
+{{ $usergroupsData := index .Page.Site.Data .Page.Sites.Default.Language.Lang }}
 
 <!-- Load usergroups and number of them-->
 {{ $usergroupsCodes := slice }}
