--- a/website/themes/beastie/layouts/partials/sidenav.html
+++ b/website/themes/beastie/layouts/partials/sidenav.html
@@ -57,6 +57,7 @@
     <a href={{ "releases" | absLangURL }}>{{ i18n "releases" }}</a>
     <ul>
       <li>{{ i18n "productionRelease" }}: <br /><a href={{ index .data.releases "u-rel133-announce" }}>{{ index .data.releases "rel133-current" }}</a></li>
+      <li>{{ i18n "productionRelease" }}: <br /><a href={{ index .data.releases "u-rel134-announce" }}>{{ index .data.releases "rel134-current" }}</a></li>
       <li>{{ i18n "productionRelease" }}: <br /><a href={{ index .data.releases "u-rel140-announce" }}>{{ index .data.releases "rel140-current" }}</a></li>
       <li>{{ i18n "productionRelease" }}: <br /><a href={{ index .data.releases "u-rel141-announce" }}>{{ index .data.releases "rel141-current" }}</a></li>
     </ul>
