documentation/themes: Enhance the book-menu feature
To activate the book menu, it is essential for the document to have a
showBookMenu parameter set as a boolean. However, not all documents use
a boolean; many utilize a string 'true' instead. This inconsistency
often arises from translations, where our current tool, po4a, does not
handle frontmatter correctly. This will ensure that the book menu
displays correctly regardless of whether showBookMenu is set as a
boolean or a string.

--- a/documentation/themes/beastie/layouts/books/list.html
+++ b/documentation/themes/beastie/layouts/books/list.html
@@ -2,7 +2,7 @@
 <input type="checkbox" class="hidden toggle" id="menu-control">
 <main class="main-wrapper-book">
   <a id="top"></a>
-  {{ if eq .Params.showBookMenu true }}
+  {{ if or (eq (string .Params.showBookMenu) "true") (eq .Params.showBookMenu true) }}
   <aside class="book-menu">
     <div class="book-menu-content">
       <input id="search-book" type="text" placeholder="{{ i18n "search" }}" aria-label="{{ i18n "search" }}" maxlength="128" />
@@ -13,7 +13,7 @@
   </aside>
   {{ end }}
   <div class="book">
-    {{ if eq .Params.showBookMenu true }}
+    {{ if or (eq (string .Params.showBookMenu) "true") (eq .Params.showBookMenu true) }}
     <div class="book-menu-mobile">
       <label for="menu-control">
         <span class="menu-control-button">
