--- a/documentation/themes/beastie/layouts/books/single.html
+++ b/documentation/themes/beastie/layouts/books/single.html
@@ -2,7 +2,7 @@
 <input type="checkbox" class="hidden toggle" id="menu-control">
 <main class="main-wrapper-book">
   <a id="top"></a>
-  {{ if eq .Params.showBookMenu true }}
+  {{ if or (eq (string .Params.showBookMenu) "true") (eq .Params.showBookMenu true) }}
   <aside class="book-menu">
     <div class="book-menu-content">
       <input id="search-book" type="text" placeholder="{{ i18n "search" }}" aria-label="{{ i18n "search" }}" maxlength="128" />
@@ -13,7 +13,7 @@
   </aside>
   {{ end }}
   <div class="book">
-    {{ if eq .Params.showBookMenu true }}
+    {{ if or (eq (string .Params.showBookMenu) "true") (eq .Params.showBookMenu true) }}
     <div class="book-menu-mobile">
       <label for="menu-control">
         <span class="menu-control-button">
