documentation: Fix build with gohugo 0.139.4
resources.ToCSS was deprecated in 0.128. gohugo 0.139.4 errors on this.

--- a/documentation/themes/beastie/layouts/partials/site-head.html
+++ b/documentation/themes/beastie/layouts/partials/site-head.html
@@ -14,7 +14,7 @@
   {{ if $.Site.Params.isOnline }}
     <link rel="shortcut icon" href="{{ absLangURL ($.Site.BaseURL) }}favicon.ico">
 
-    {{- $styles := resources.Get "styles/main.scss" | resources.ToCSS | resources.Minify }}
+    {{- $styles := resources.Get "styles/main.scss" | css.Sass | resources.Minify }}
     <link rel="stylesheet" href="{{ $styles.Permalink }}">
     <link rel="stylesheet" href="{{ absLangURL ($.Site.BaseURL) }}css/font-awesome-min.css">
 
@@ -29,7 +29,7 @@
   {{ else }}
     <link rel="shortcut icon" href="/favicon.ico">
 
-    {{- $styles := resources.Get "styles/main.scss" | resources.ToCSS | resources.Minify }}
+    {{- $styles := resources.Get "styles/main.scss" | css.Saas | resources.Minify }}
     <link rel="stylesheet" href="{{ $styles.RelPermalink }}">
     <link rel="stylesheet" href="/css/font-awesome-min.css">
 
