Add missing comma to list of legacy releases
"13.3, 13.4 14.1" -> "13.3, 13.4, 14.1"

Sponsored by:	Amazon

--- a/website/themes/beastie/layouts/index.html
+++ b/website/themes/beastie/layouts/index.html
@@ -68,7 +68,7 @@
               <li>
                 {{ i18n "legacy" }}:
                 <a href={{ index $.Site.Data.releases "u-rel133-announce" }}>{{ index $.Site.Data.releases "rel133-current" }}</a>,
-                <a href={{ index $.Site.Data.releases "u-rel134-announce" }}>{{ index $.Site.Data.releases "rel134-current" }}</a>
+                <a href={{ index $.Site.Data.releases "u-rel134-announce" }}>{{ index $.Site.Data.releases "rel134-current" }}</a>,
                 <a href={{ index $.Site.Data.releases "u-rel141-announce" }}>{{ index $.Site.Data.releases "rel141-current" }}</a>
               </li>
               {{ $betaUpcoming := index $.Site.Data.releases "beta-upcoming" }}
