themes/beastie/layouts/partials/site-head.html: Fix a typo
s/css.Saas/css.Sass/ this should unbreak offline build.

--- a/documentation/themes/beastie/layouts/partials/site-head.html
+++ b/documentation/themes/beastie/layouts/partials/site-head.html
@@ -29,7 +29,7 @@
   {{ else }}
     <link rel="shortcut icon" href="/favicon.ico">
 
-    {{- $styles := resources.Get "styles/main.scss" | css.Saas | resources.Minify }}
+    {{- $styles := resources.Get "styles/main.scss" | css.Sass | resources.Minify }}
     <link rel="stylesheet" href="{{ $styles.RelPermalink }}">
     <link rel="stylesheet" href="/css/font-awesome-min.css">
 
