--- a/website/themes/beastie/layouts/security/single.html
+++ b/website/themes/beastie/layouts/security/single.html
@@ -27,7 +27,7 @@
               {{ range .notices }}
                 <tr>
                   <td class="txtdate">{{ .date }}</td>
-                  <td><a href="{{.Site.BaseURL | absLangURL }}security/advisories/{{ .name }}.asc">{{ .name }}</a></td>
+                  <td><a href="{{.Site.BaseURL | absURL }}security/advisories/{{ .name }}.asc">{{ .name }}</a></td>
                 </tr>
               {{ end }}
             {{ end }}
@@ -37,7 +37,7 @@
               {{ range .advisories }}
                 <tr>
                   <td class="txtdate">{{ .date }}</td>
-                  <td><a href="{{.Site.BaseURL | absLangURL }}security/advisories/{{ .name }}.asc">{{ .name }}</a></td>
+                  <td><a href="{{.Site.BaseURL | absURL }}security/advisories/{{ .name }}.asc">{{ .name }}</a></td>
                 </tr>
               {{ end }}
             {{ end }}
