Add Plausible Analytics to main site and docs
Reviewed by:	fernape, dch
With hat:	core
Differential Revision:	https://reviews.freebsd.org/D49757

--- a/website/themes/beastie/layouts/partials/site-head.html
+++ b/website/themes/beastie/layouts/partials/site-head.html
@@ -29,4 +29,7 @@
   <meta property="og:site_name" content="{{ .Site.Title }}" />
   <!-- END SEO -->
 
+  <!-- privacy-friendly web statistics -->
+  <script defer data-domain="freebsd.org" src="https://plausible.io/js/script.outbound-links.js"></script>
+
 </head>
