--- a/documentation/themes/beastie/layouts/partials/site-head.html
+++ b/documentation/themes/beastie/layouts/partials/site-head.html
@@ -69,6 +69,9 @@
     </script>
     <!-- END SEO -->
 
+  <!-- privacy-friendly web statistics -->
+  <script defer data-domain="freebsd.org" src="https://plausible.io/js/script.outbound-links.js"></script>
+
   {{ end }}
 </head>
 
