Fixed broken link in site navigation

--- a/website/themes/beastie/layouts/partials/site-navigation.html
+++ b/website/themes/beastie/layouts/partials/site-navigation.html
@@ -151,7 +151,7 @@
           <a href="https://www.freebsdfoundation.org/donate/">{{ i18n "monetaryDonations" }}</a>
         </li>
         <li>
-          <a href={{ "donations/#systems/" | absLangURL }}>{{ i18n "hardwareDonations" }}</a>
+          <a href={{ "donations/#systems" | absLangURL }}>{{ i18n "hardwareDonations" }}</a>
         </li>
       </ul>
     </li>
