--- a/website/themes/beastie/layouts/events/list.html
+++ b/website/themes/beastie/layouts/events/list.html
@@ -27,37 +27,6 @@
         {{ $eventsData = $dataDefaultLanguage }}
       {{ end }}
 
-      <!-- Load events and number of times -->
-      {{ $countriesCodes := slice }}
-      {{ $countriesCodesTimes := newScratch }}
-
-      {{ with $eventsData }}
-        {{ range (sort .events "year" "desc") }}
-          {{ range .events }}
-            {{ if .countryCode }}
-              {{ $countriesCodes = $countriesCodes | append .countryCode }}
-
-              {{ if $countriesCodesTimes.Get .countryCode }}
-                {{ $countriesCodesTimes.Add .countryCode 1 }}
-              {{ else }}
-                {{ $countriesCodesTimes.Set .countryCode 1 }}
-              {{ end }}
-            {{ end }}
-          {{ end }}
-        {{ end }}
-      {{ end }}
-
-      {{ $countriesCodes = $countriesCodes | uniq }}
-
-      {{ $countriesTimes := slice }}
-      {{ range $element := $countriesCodes }}
-        {{ $countriesTimes = $countriesTimes | append ($countriesCodesTimes.Get .) }}
-      {{ end }}
-
-      {{ $eventsImageUrl := (printf "https://chart.googleapis.com/chart?cht=t&chs=400x200&chtm=world&chco=ffffff,ffbe38,600000&chf=bg,s,4D89F9&chd=t:%s&chld=%s" (delimit $countriesTimes ",") (delimit $countriesCodes "")) }}
-
-      <img alt="events map" src={{ $eventsImageUrl }} />
-
       {{ $eventsCounter := 0 }}
 
       {{ if isset .Params "year" }}
@@ -113,7 +82,7 @@
                           <p>
                             <b><a href="{{ .url }}">{{ .name }}</a></b>, {{ .site }}, {{ .city }}, {{ .country }}
                             <br />
-                            <em>{{ dateFormat "02 January, 2006" .startDate }} - {{ dateFormat "02 January, 2006" .endDate }}</em>
+                            <em>{{ dateFormat "02" .startDate }} - {{ dateFormat "02 January, 2006" .endDate }}</em>
                             <br />
                             {{ .description | safeHTML }}
                           </p>
@@ -143,7 +112,7 @@
                           <p>
                             <b><a href="{{ .url }}">{{ .name }}</a></b>, {{ .site }}, {{ .city }}, {{ .country }}
                             <br />
-                            <em>{{ dateFormat "02 January, 2006" .startDate }} - {{ dateFormat "02 January, 2006" .endDate }}</em>
+                            <em>{{ dateFormat "02" .startDate }} - {{ dateFormat "02 January, 2006" .endDate }}</em>
                             <br />
                             {{ .description | safeHTML }}
                           </p>
@@ -188,7 +157,7 @@
                       <p>
                         <b><a href="{{ .url }}">{{ .name }}</a></b>, {{ .site }}, {{ .city }}, {{ .country }}
                         <br />
-                        <em>{{ dateFormat "02 January, 2006" .startDate }} - {{ dateFormat "02 January, 2006" .endDate }}</em>
+                        <em>{{ dateFormat "02" .startDate }} - {{ dateFormat "02 January, 2006" .endDate }}</em>
                         <br />
                         {{ .description | safeHTML }}
                       </p>
