website: remove needless comma symbol
Fixes:	e32b4e7ef20a964e2fe2c46503ea834a8b1b6f08

--- a/website/themes/beastie/layouts/index.html
+++ b/website/themes/beastie/layouts/index.html
@@ -67,7 +67,7 @@
               </li>
               <li>
                 {{ i18n "legacy" }}:
-                <a href={{ index $.Site.Data.releases "u-rel135-announce" }}>{{ index $.Site.Data.releases "rel135-current" }}</a>,
+                <a href={{ index $.Site.Data.releases "u-rel135-announce" }}>{{ index $.Site.Data.releases "rel135-current" }}</a>
               </li>
               {{ $betaUpcoming := index $.Site.Data.releases "beta-upcoming" }}
               {{ if ne $betaUpcoming "IGNORE" }}
