Sync website/content/ru/where.adoc to the EN 728be2f55235470406eb01e9a547770c44410e7a revision. Link "ru" content to the main page.
Reviewed by:	carlavilla, maxim (mentor), vladlen
Differential Revision:	https://reviews.freebsd.org/D53041

--- a/website/themes/beastie/layouts/index.html
+++ b/website/themes/beastie/layouts/index.html
@@ -106,6 +106,7 @@
             {{ end }}
             -->
             <li><a href="{{ $.Site.BaseURL }}">en</a></li>
+            <li><a href="{{ $.Site.BaseURL }}">ru</a></li>
             <li><a href="{{ $.Site.BaseURL }}zh-tw">zh-tw</a></li>
           </ul>
         </div>
