website: fix events and press lists on home page Reviewed by: lwhsu Differential Revision: https://reviews.freebsd.org/D53647

--- a/website/themes/beastie/layouts/_partials/events.html
+++ b/website/themes/beastie/layouts/_partials/events.html
@@ -1,4 +1,4 @@
-{{ $eventsPath := (printf "data/%s/events/events.toml" $.Language.Lang (dateFormat "2006" now)) }}
+{{ $eventsPath := (printf "data/%s/events/events%s.toml" $.Language.Lang (dateFormat "2006" now)) }}
 
 {{ $eventsData := "" }}
 {{ if (fileExists $eventsPath) -}}
