--- a/website/themes/beastie/layouts/_partials/press.html
+++ b/website/themes/beastie/layouts/_partials/press.html
@@ -2,6 +2,10 @@
 
 {{ $translatedPressEnabled := false }}
 
+{{ if in (slice "ru" "fr") $.Language.Lang }}
+  {{ $translatedPressEnabled = true }}
+{{ end }}
+
 {{ $pressData := "" }}
 {{ if $translatedPressEnabled -}}
   {{ $data := index .Site.Data $.Language.Lang }}
