--- a/website/themes/beastie/layouts/index.html
+++ b/website/themes/beastie/layouts/index.html
@@ -63,6 +63,10 @@
             <ul id="frontreleaseslist">
               <li>
                 {{ i18n "production" }}:
+                <a href={{ index $.Site.Data.releases "u-rel150-announce" }}>{{ index $.Site.Data.releases "rel150-current" }}</a>
+              </li>
+              <li>
+                {{ i18n "production" }}:
                 <a href={{ index $.Site.Data.releases "u-rel143-announce" }}>{{ index $.Site.Data.releases "rel143-current" }}</a>
               </li>
               <li>
