--- a/website/themes/beastie/layouts/_partials/sidenav.html
+++ b/website/themes/beastie/layouts/_partials/sidenav.html
@@ -55,6 +55,7 @@
   <li>
     <a href={{ "releases" | absLangURL }}>{{ i18n "releases" }}</a>
     <ul>
+      <li>{{ i18n "productionRelease" }}: <br /><a href={{ index .data.releases "u-rel150-announce" }}>{{ index .data.releases "rel150-current" }}</a></li>
       <li>{{ i18n "productionRelease" }}: <br /><a href={{ index .data.releases "u-rel143-announce" }}>{{ index .data.releases "rel143-current" }}</a></li>
       <li>Legacy Release: <br /><a href={{ index .data.releases "u-rel135-announce" }}>{{ index .data.releases "rel135-current" }}</a></li>
     </ul>
