Website: Add admonitions support
Initial work by Mark Phillips <mark@freebsdfoundation.org>

--- a/website/themes/beastie/layouts/_partials/site-head.html
+++ b/website/themes/beastie/layouts/_partials/site-head.html
@@ -10,6 +10,7 @@
   <link rel="shortcut icon" href="{{ absLangURL ($.Site.BaseURL) }}favicon.ico">
 
   <link rel="stylesheet" href="{{ absLangURL ($.Site.BaseURL) }}css/fixed.css">
+  <link rel="stylesheet" href="{{ absLangURL ($.Site.BaseURL) }}css/font-awesome-min.css">
 
   <link rel="search" type="application/opensearchdescription+xml" href="{{ absLangURL ($.Site.BaseURL) }}opensearch/man.xml" title="FreeBSD Man">
   <link rel="search" type="application/opensearchdescription+xml" href="{{ absLangURL ($.Site.BaseURL) }}opensearch/man-freebsd-release-ports.xml" title="FreeBSD Man+P">
